[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leval"
dynamic = ["version"]
description = "Limited evaluator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Valohai", email = "info@valohai.com" },
]

[project.optional-dependencies]
lint = [
    "black==22.3.0",
    "flake8-black==0.3.3",
    "flake8-bugbear==22.4.25",
    "flake8-docstrings==1.6.0",
    "flake8-isort==4.1.1",
    "flake8-tidy-imports==4.8.0",
    "flake8==4.0.1",
    "isort==5.10.1",
    "mypy==0.960",
]
test = [
    "pytest-cov==2.10.1",
    "pytest<7.0",
]

[project.urls]
Homepage = "https://github.com/valohai/leval"

[tool.hatch.version]
path = "leval/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/leval",
]
