[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leval"
dynamic = ["version"]
description = "Limited evaluator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Valohai", email = "info@valohai.com" },
]

[project.optional-dependencies]
test = [
    "pytest-cov==2.10.1",
    "pytest<7.0",
]

[project.urls]
Homepage = "https://github.com/valohai/leval"

[tool.hatch.version]
path = "leval/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/leval",
]

[tool.ruff]
ignore = [
    "D100",
    "D101",
    "D104",
    "D200",
    "D203",
    "D212",
]
line-length = 88
select = [
    "B",
    "COM",
    "D",
    "E",
    "F",
    "I",
    "TID",
    "W",
]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
"test*" = [
    "D102",
    "D103",
]
