[metadata]
name = leval
description = Limited evaluator
version = attr:leval.__version__
url = https://github.com/valohai/leval
author = Valohai
author_email = info@valohai.com
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
include =
    leval*

[options.extras_require]
test =
    pytest-cov==2.10.1
    pytest<7.0
lint =
    black==20.8b1
    flake8-black==0.2.1
    flake8-bugbear==20.11.1
    flake8-docstrings==1.5.0
    flake8==3.8.4
    isort==5.6.4
    mypy>=0.812
[flake8]
max-line-length = 88
ignore-decorators = internal
extend-ignore =
    D100,
    D101,
    D104,
    D200
per-file-ignores =
    test*: D103

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
