[metadata]
name = leval
description = Limited evaluator
version = attr:leval.__version__
url = https://github.com/valohai/leval
author = Valohai
author_email = info@valohai.com
maintainer = Aarni Koskela
maintainer_email = akx@iki.fi
license = MIT

[options]
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
include =
    leval*

[options.extras_require]
test =
    pytest-cov==2.10.1
    pytest<7.0
lint =
    black==22.3.0
    flake8-black==0.3.3
    flake8-bugbear==22.4.25
    flake8-docstrings==1.6.0
    flake8-isort==4.1.1
    flake8-tidy-imports==4.8.0
    flake8==4.0.1
    isort==5.10.1
    mypy==0.960

[flake8]
max-line-length = 88
ignore-decorators = internal
extend-ignore =
    D100,
    D101,
    D104,
    D200
per-file-ignores =
    test*: D102,D103
ban-relative-imports = true

[isort]
profile = black
multi_line_output = 3
